fix layout issues in filmstrip

--- a/src/app/components/thumbnail/thumbnail.component.scss
+++ b/src/app/components/thumbnail/thumbnail.component.scss
@@ -1,22 +1,32 @@
-img,
-figure {
-  pointer-events: none;
-}
-
-img {
-  display: block;
-  width: 250px;
-}
-
 figure {
   display: inline-block;
-  margin: 10px;
+  margin: 0;
+  padding: 0;
 }
 
 label {
   display: inline-block;
   border: 2px solid transparent;
   cursor: pointer;
+  width:  190px;
+  height: 190px;
+}
+
+figure,
+.thumb {
+  width:  100%;
+  height: 100%;
+}
+
+.thumb {
+  height: 100%;
+  width: 100%;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+
+  image-orientation: from-image;
 }
 
 input[type="checkbox"] {
